updated multi-stage build exercices